--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.24.0"
+rayon = "1.10.0"
 tempfile = "3.20.0"
 walkdir = "2.5.0"
 zip = "4.0.0"
